force-app/main/default/objects/b3o__Onboarding_Trigger_Control__c/b3o__Onboarding_Trigger_Control__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom settings controls triggers behaviour for the 3B Onboarding app</description>
    <label>Onboarding Trigger Control</label>
</CustomObject>