force-app/main/default/objects/b3o__Onboarding_Trigger_Control__c/fields/b3o__Disable_App_Stage_Latest_Stage_Trigger__c.field-meta.xml
<CustomField>
    <fullName>b3o__Disable_App_Stage_Latest_Stage_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Auto-assign last application stage to an application where the an app stage is deleted</inlineHelpText>
    <label>Disable App Stage Latest Stage Trigger</label>
    <type>Checkbox</type>
</CustomField>