force-app/main/default/objects/b3o__Onboarding_Trigger_Control__c/fields/b3o__Disable_Cascade_Delete_Cand_Scorecards__c.field-meta.xml
<CustomField>
    <fullName>b3o__Disable_Cascade_Delete_Cand_Scorecards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Cascade Delete Cand Scorecards</label>
    <type>Checkbox</type>
</CustomField>