force-app/main/default/objects/b3o__Onboarding_Trigger_Control__c/fields/b3o__Disable_Cascade_Delete_Doc_Assignments__c.field-meta.xml
<CustomField>
    <fullName>b3o__Disable_Cascade_Delete_Doc_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, we will not cascade-delete document submissions when document assignments are deleted.</inlineHelpText>
    <label>Disable Cascade Delete Doc Assignments</label>
    <type>Checkbox</type>
</CustomField>