force-app/main/default/objects/b3o__Onboarding_Trigger_Control__c/fields/b3o__Disable_Certificate_Compliance_Trigger__c.field-meta.xml
<CustomField>
    <fullName>b3o__Disable_Certificate_Compliance_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the system will disable the certification evaluation trigger</inlineHelpText>
    <label>Disable Certificate Compliance Trigger</label>
    <type>Checkbox</type>
</CustomField>