force-app/main/default/objects/b3o__Onboarding_Trigger_Control__c/fields/b3o__Disable_Get_or_Create_App_Stage_Trigger__c.field-meta.xml
<CustomField>
    <fullName>b3o__Disable_Get_or_Create_App_Stage_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>On insert/update, if the application is missing an assignment to a b3o__Current_Application_Stage__c either get existing application stage for the first recruitment step for the app&apos;s related recruitment process or create a new application stage for the first recruitment step for the app&apos;s related recruitment process</inlineHelpText>
    <label>Disable Get or Create App Stage Trigger</label>
    <type>Checkbox</type>
</CustomField>