force-app/main/default/objects/b3o__Onboarding_Trigger_Control__c/fields/b3o__Disable_Session_Invites_Roll_Up_Trigger__c.field-meta.xml
<CustomField>
    <fullName>b3o__Disable_Session_Invites_Roll_Up_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to disable the session invitation&apos;s roll up trigger</inlineHelpText>
    <label>Disable Session Invites Roll Up Trigger</label>
    <type>Checkbox</type>
</CustomField>